--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -4,6 +4,7 @@ accommodate ,/v./@容纳;,/v./@使适应;,/v./@适应;,/v./@调节;
 accordingly ,/adv./@因此;
 acknowledge ,/v./@承认;
 acquisition ,/n./@获得;,/n./@获得物;,/n./@习得;,/n./@收购;
+adversative ,/adj./@反義的;,/n./@反義字;
 affectation ,/n./@做作;
 affirmation ,/n./@肯定;,/n./@确定;,/n./@确认;
 affirmative ,/adj./@肯定的;
@@ -176,6 +177,7 @@ frustration ,/n./@挫折;
 fundamental ,/adj./@基础的;
 furthermore ,/adv./@而且;
 gerontology ,/n./@老年医学;,/n./@老年病学;,/n./@老人学;
+grammatical ,/adj./@語法的;,/adj./@符合語法的;
 grandfather ,/n./@祖父;,/n./@外祖父;
 grandmother ,/n./@祖母;,/n./@外祖母;
 granularity ,/n./@間隔尺寸;,/n./@粒度;
@@ -209,7 +211,7 @@ inadvertent ,/adj./@粗心的;,/adj./@无意的;,/adj./@不注意的;,/adj./@怠
 incantation ,/n./@咒语;,/n./@念咒;
 incarcerate ,/v./@監禁;,/vt./@关押;,/vt./@囚禁;
 incarnation ,/n./@化身;
-inclination ,/n./@傾向;,/n./@愛好;,/n./@傾斜;,/n./@斜坡;
+inclination ,/n./@傾向;,/n./@愛好;,/n./@傾斜;,/n./@斜坡;,/n./@意向;
 incongruous ,/adj./@不一致的;,/adj./@不協調的;,/adj./@不和諧的;
 incorporate ,/v./@合倂;,/v./@包含;,/v./@吸收;,/v./@體現;,/adj./@一體化的;
 incredulous ,/adj./@懷疑的;
@@ -309,14 +311,15 @@ pomegranate ,/n./@石榴;,/n./@石榴树;
 pontificate ,/n./@教宗職權;,/n./@教宗任期;
 possibility ,/n./@可能性;
 postulation ,/n./@假定;,/n./@假設;
-precipitate ,/v./@促成;
+precipitant ,/n./@促發者;,/n./@沉澱劑;
+precipitate ,/v./@促成;,/vt./@促使;,/vi./@沉澱;
 predictable ,/adj./@可预测的;
 predominant ,/adj./@主要的;,/adj./@卓越的;,/adj./@支配的;,/adj./@有影響的;,/adj./@有力的;
 prehistoric ,/adj./@史前的;
 preliminary ,/adj./@初步的;,/adj./@開端的;,/n./@初步;,/n./@開端;
 premonition ,/n./@预感;
 preparation ,/n./@准备;
-preposition ,/n./@介词;
+preposition ,/n./@介词;,/n./@前置詞;
 prerogative ,/adj./@有特權的;
 prestigious ,/adj./@有名望的;,/adj./@有声望的;
 presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
@@ -386,6 +389,7 @@ subordinate ,/adj./@下属的;,/adj./@次要的;
 substancial ,/adj./@实体性的;
 substandard ,/adj./@不合格的;,/adj./@次等的;
 substantial ,/adj./@可觀的;
+substantive ,/n./@名詞;,/n./@實詞;,/adj./@重大的;,/adj./@獨立的;,/adj./@實質性的;
 subtraction ,/n./@减;
 superficial ,/adj./@表面的;,/adj./@膚淺的;
 superiority ,/n./@优越;,/n./@优势;,/n./@优越感;,/n./@优越性;
