--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -93,7 +93,9 @@ entanglement ,/n./@纠纷;
 enthusiastic ,/adj./@热情的;
 entreprenant ,/adj./@大胆的;,/adj./@有上进心的;
 entrepreneur ,/n./@创业者;
+epexegetical ,/adj./@附加說明性的;
 estrangement ,/n./@疏離;,/n./@疏遠;,/n./@隔閡;
+etymological ,/adj./@詞源的;,/adj./@詞源學的;
 evangelistic ,/adj./@傳福音的;,/adj./@福音傳播者的;
 exaggeration ,/n./@夸大;,/n./@夸张;
 exasperation ,/n./@憤怒;,/n./@惡化;
@@ -134,6 +136,7 @@ intelligence ,/n./@智慧;
 intermediary ,/n./@调解人;
 intermediate ,/adj./@中间的;
 intermission ,/n./@幕間休息;,/n./@暫停;,/n./@中斷;
+interpretive ,/redirected./@target="interpretative";
 intersection ,/n./@交集;,/n./@交点;,/n./@十字路口;,/n./@相交;
 interstellar ,/adj./@星際的;
 intervention ,/n./@介入;,/n./@調停;,/n./@干涉;
@@ -163,6 +166,7 @@ notification ,/n./@通知;
 occupational ,/adj./@职业的;
 organisation ,/n./@组织;
 organization ,/n./@组织;
+orthographic ,/adj./@拼寫的;
 ostentatious ,/adj./@招搖的;,/adj./@誇耀的;,/adj./@炫耀的;,/adj./@賣弄的;
 outmanoeuvre ,/vt./@智勝;
 overestimate ,/v./@高估;
