--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -90,7 +90,9 @@ ornamentation ,/n./@裝飾;
 parallelogram ,/n./@平行四邊形;
 participation ,/n./@参与;,/n./@分享;,/n./@参股;
 perpendicular ,/n./@垂线;
+precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
+prepositional ,/adj./@介詞的;,/adj./@前置詞的;
 procrastinate ,/vi./@拖延;
 pronunciation ,/n./@發音;,/n./@讀法;,/n./@讀音;
 psychological ,/adj./@心理学的;
