--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -18,10 +18,12 @@ impressionable ,/adj./@敏感的;,/adj./@易受影響的;
 infrastructure ,/n./@基础设施;
 initialization ,/n./@初始化;
 interpretation ,/n./@翻譯;,/n./@解釋;,/n./@口譯;
+interpretative ,/adj./@解釋的;,/adj./@解釋性的;,/adj./@說明性的;
 interpupillary ,/adj./@瞳孔间的;
 methodological ,/adj./@方法論的;
 mountaineering ,/n./@登山;,/n./@登山運動;
 multiplication ,/n./@乘法;,/n./@增加;
+orthographical ,/redirected./@target="orthographic";
 pharmaceutical ,/adj./@制药的;,/adj./@制药学的;
 philanthropist ,/n./@慈善家;,/n./@博愛主義者;
 quintessential ,/adj./@精髓的;,/adj./@精粹的;
