--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -93,7 +93,7 @@ etc ,/int./@等等;
 eve ,/n./@前夕;,/n./@前夜;
 eye ,/n./@目;
 fan ,/n./@風扇;,/n./@追隨者;
-far ,/adj./@遠@的;
+far ,/adj./@遠的;,/adj./@遙遠的;,/adj./@久遠的;,/adv./@遠;,/adv./@非常;
 fat ,/adj./@肥胖的;
 fax ,/n./@傳眞;
 FBI ,/n.//abbr./@聯邦調查局;
@@ -256,6 +256,7 @@ pro ,/n./@贊成;,/adv./@贊成地;
 pub ,/n./@酒館;
 pun ,/n./@雙關語;,/n./@俏皮話;,/v./@說雙關語;
 put ,/v./@放;
+pyx ,/n./@聖餐盒;,/n./@聖體盒;
 rag ,/n./@碎布;,/n./@碎屑;,/v./@戲弄;,/v./@責罵;
 ram ,/n./@公羊;,/n./@夯锤;,/vt./@猛撞;,/vt./@硬塞;
 rat ,/n./@耗子;,/n./@老鼠;
