--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -469,6 +469,7 @@ hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/vt./@投擲;,/vt./@拋出;
 hurt ,/v./@傷害;
 hush ,/vt./@使沉默;,/vt./@使安靜;,/n./@靜寂;,/n./@沉默;
+hymn ,/n./@讚美詩;,/n./@聖歌;
 hype ,/v./@大肆宣傳;,/n./@不实宣传;,/n./@宣传骗局;,/vt./@夸张地宣传;
 i've ,/v./@我已;
 icon ,/n./@圖標;
