--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -78,7 +78,7 @@ apple ,/n./@苹果;
 apply ,/v./@應用;,/v./@申請;
 April ,/n./@四月;
 ardor ,/n./@狂熱;
-arena ,/n./@競技場;
+arena ,/n./@競技場;,/n./@角鬥場;,/n./@活動場所;,/n./@競爭場所;
 argot ,/n./@隱語;
 argue ,/v./@爭論;
 armor ,/n./@裝甲;
@@ -812,6 +812,7 @@ outre ,/pref./@過度的;
 overt ,/adj./@明顯的;
 ovoid ,/n./@卵形物;
 owner ,/n./@所有者;,/n./@持有者;
+oxide ,/n./@氧化物;
 ozone ,/n./@臭氧;
 padre ,/n./@神父;
 paean ,/n./@歡樂頌;
