--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -63,6 +63,7 @@ angular ,/adj./@角狀的;
 animate ,/adj./@活的;
 anomaly ,/n./@異常;,/n./@反常;
 another ,/adj./@另一個;
+antenna ,/n./@觸角;,/n./@天線;
 antique ,/n./@古董;,/adj./@古老的;
 antonym ,/n./@反義詞;
 anxiety ,/n./@緊張;,/n./@焦慮;
@@ -83,7 +84,7 @@ arduous ,/adj./@努力的;
 arousal ,/n./@喚醒;,/n./@覺醒;,/n./@激勵;
 arrange ,/v./@安排;
 arsenal ,/n./@軍械庫;,/n./@兵工廠;,/n./@武器储备;,/n./@武器庫;
-article ,/n./@文章;
+article ,/n./@文章;,/n./@條款;,/n./@物品;,/n./@冠詞;
 artisan ,/n./@工匠;,/n./@技工;
 ascetic ,/adj./@苦行的;
 ascribe ,/vt./@歸因於;,/vt./@歸屬於;
@@ -236,6 +237,7 @@ Chinese ,/n./@漢語;
 chowder ,/n./@雜燴;
 chronic ,/adj./@慢性的;,/adj./@長期的;,/adj./@久病的;,/adj./@習慣性的;
 chuckle ,/v./@輕笑;
+ciboria ,/redirected./@target="ciborium";
 circuit ,/n./@逥路;,/n./@巡逥;,/n./@電路;
 clamber ,/v./@攀登;
 clarify ,/v./@澄清;
@@ -415,6 +417,7 @@ dignity ,/n./@尊嚴;
 digraph ,/n./@二合字母;
 digress ,/v./@離題;,/v./@跑題;
 diorama ,/n./@透视模型;,/n./@立體模型;,/n./@仿真模型;,/n./@透视缩影;,/n./@透視圖畫;
+dioxide ,/n./@二氧化物;
 diploma ,/n./@畢業文憑;,/n./@學位證書;
 disable ,/v./@致殘;,/v./使@失去能力;
 disband ,/v./@解散;,/v./@遣散;
@@ -533,11 +536,12 @@ extreme ,/adj./@極度的;,/n./@極端;
 faction ,/n./@派別;,/n./@小集團;,/n./@内訌;
 factory ,/n./@工廠;
 factual ,/adj./@事實的;,/adj./@事实性的;,/adj./@如實的;,/adj./@真實的;
-faculty ,/n./@官能;,/n./@本領;,/n./@學係;,/n./@院系;
+faculty ,/n./@官能;,/n./@本領;,/n./@學係;,/n./@院系;,/n./@才能;
 failure ,/n./@失敗;
 fanatic ,/n./@狂熱者;,/n./@狂熱分子;,/n./@入迷者;,/adj./@狂熱的;,/adj./@入迷的;
 fantasy ,/n./@幻想;
 faraway ,/adj./@很遠的;
+farther ,/adj./@更遠的;,/adj./@進一步的;
 fascist ,/n./@法西斯分子;
 fashion ,/n./@時尚;
 fatigue ,/n./@疲勞;,/n./@勞累;
@@ -720,7 +724,7 @@ instant ,/adj./@立卽的;
 instead ,/v./@代替;
 instill ,/vt./@逐漸灌輸;
 integer ,/n./@整數;
-intense ,/adj./@強烈的;
+intense ,/adj./@強烈的;,/adj./@劇烈的;,/adj./@極度的;
 interim ,/adj./@臨時的;,/adj./@暫時的;,/adj./@中間的;
 intrude ,/v./@侵入;,/v./@打擾;
 invalid ,/adj./@無效的;
@@ -836,6 +840,7 @@ monitor ,/n./@班長;,/n./@監視器;,/v./@監視;
 monster ,/n./@怪物;
 montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
+mordant ,/adj./@尖酸的;,/adj./@尖刻的;,/n./@媒染劑;,/n./@腐蝕劑;
 morning ,/n./@早上;
 mugwort ,/n./@艾蒿;
 mulatto ,/n./@黑白混血兒;
@@ -933,7 +938,7 @@ partial ,/adj./@部分的;
 partner ,/n./@夥伴;
 passage ,/n./@段落;,/n./@走廊;,/n./@通路;
 passion ,/n./@激情;,/n./@熱情;
-passive ,/adj./@被動的;,/adj./@消極的;
+passive ,/adj./@被動的;,/adj./@消極的;,/adj./@順從的;,/adj./@被動語態的;,/n./@被動語態;
 pastime ,/n./@消遣;
 patient ,/n./@患者;,/adj./@耐心的;
 patrick ,/n./@帕特里克;
@@ -1459,7 +1464,7 @@ widower ,/n./@鰥夫;
 willing ,/adj./@樂意的;
 wiretap ,/v./@竊聽;,/n./@竊聽;
 without ,/prep./@沒有;
-witness ,/v./@目覩;
+witness ,/vt./@目擊;,/vt./@見證;,/n./@目擊者;,/n./@見證;
 wolfram ,/n./@鎢;,/n./@鎢礦;
 woollen ,/adj./@羊毛的;,/adj./@毛織的;
 worldly ,/adj./@世間的;,/adj./@塵世的;,/adj./@世故的;,/adj./@世俗的;
