--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -2,6 +2,7 @@ aardvark ,/n./@土豚;,/n./@食蟻獸;
 abdicate ,/v./@放棄;
 aberrant ,/adj./@異常的;
 abeyance ,/n./@中止;,/n./@停顿;,/n./@暂搁;
+ablative ,/adj./@奪格的;,/n./@奪格;
 abnormal ,/adj./@异常的;
 abortion ,/n./@流产;
 abrogate ,/v./@取消;,/v./@廢除;
@@ -197,6 +198,7 @@ chestnut ,/n./@栗子;,/n./@栗樹;
 childish ,/adj./@幼稚的;
 children ,/n./@孩子@们;
 chivalry ,/n./@騎士精神;,/n./@騎士風度;,/n./@騎士制度;
+ciborium ,/n./@聖體盒;
 cinnamon ,/n./@桂皮;,/n./@肉桂树;,/n./@浅黄褐色;
 circular ,/adj./@循环的;
 citation ,/n./@引用;
@@ -247,6 +249,7 @@ conserve ,/v./@保护;
 consider ,/v./@考虑;
 conspire ,/vi./@密谋;,/v./@合谋;
 constant ,/adj./@恒定的;,/adj./@不变的;
+construe ,/vt./@解釋;,/vt./@分析;,/vt./@翻譯;
 consumer ,/n./@消费者;
 contempt ,/n./@蔑视;,/n./@藐视;,/n./@輕視;,/n./@鄙視;
 contents ,/n./@目录;
@@ -310,7 +313,7 @@ dedicate ,/v./@獻身;,/v./@奉献;,/v./@致力;
 defeated ,/adj./@被打败的;
 defector ,/n./@叛徒;,/n./@逃兵;
 defender ,/n./@守卫者;
-definite ,/adj./@清楚的;,/adj./@明确的;
+definite ,/adj./@清楚的;,/adj./@明确的;,/adj./@限定的;,/adj./@一定的;
 dejected ,/adj./@沮丧的;,/adj./@情绪低落的;,/adj./@垂头丧气的;
 delegate ,/n./@委派;,/n./@代表;
 delicate ,/adj./@精致的;,/adj./@微妙的;,/adj./@精美的;,/adj./@柔和的;,/adj./@纖弱的;,/adj./@優雅的;
@@ -318,6 +321,7 @@ delusion ,/n./@迷惑;,/n./@错觉;
 delusive ,/adj./@迷惑性的;
 democrat ,/n./@民主党人;
 demolish ,/v./@拆除;,/v./@破壞;,/v./@爆破;,/v./@毀壞;
+deponent ,/adj./@異態的;,/n./@異態動詞;,/n./@證人;
 derelict ,/adj./@破败的;,/adj./@荒废的;
 describe ,/v./@描述;
 deserter ,/n./@逃兵;,/n./@背棄者;
@@ -520,6 +524,7 @@ garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
 generous ,/adj./@慷慨的;
+genitive ,/adj./@所有格的;,/n./@所有格;,/adj./@屬格的;,/n./@屬格;
 genocide ,/n./@種族滅絕;,/n./@種族屠殺;
 geometry ,/n./@幾何學;
 glorious ,/adj./@壮丽的;,/adj./@光荣的;
