--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -24,6 +24,7 @@ adversary ,/n./@敵手;
 advertise ,/v./@做广告;
 aeroplane ,/n./@飛機;
 aesthetic ,/adj./@美学的;,/adj./@審美的;
+affidavit ,/n./@宣誓書;,/n./@口供書;
 affiliate ,/v./联号;,/v./使@附属;,/v./@参加;,/n./@附属机构;,/vi./@并入;,/vi./@加入;
 afternoon ,/n./@下午;
 afterward ,/adv./@後來;,/adv./@之後;
@@ -43,7 +44,7 @@ allowance ,/n./@津贴;
 alongside ,/prep./@在旁边;,/adv./@在旁边;
 alternate ,/v./@交替;
 amazement ,/n./@驚奇;,/n./@詫異;
-ambiguity ,/n./@歧義;,/n./@意義不明;
+ambiguity ,/n./@歧義;,/n./@意義不明;,/n./@模稜兩可;
 ambiguous ,/adj./@不確定的;,/adj./@模棱兩可的;
 ambitious ,/adj./@有野心的;
 ambulance ,/n./@救护车;,/n./@野戰醫院;
@@ -159,6 +160,7 @@ catalogue ,/n./@目錄;
 Catalonia ,/n./@加泰羅尼亞;
 catamaran ,/n./@雙體船;
 catatonic ,/adj./@緊張性精神癥的;
+causative ,/adj./@使役的;,/n./@使役動詞;,/adj./@作為原因的;
 celebrate ,/v./@庆祝;
 celebrity ,/n./@名人;
 celestial ,/adj./@天国的;,/adj./@天空的;,/adj./@天体的;,/adj./@精妙的;
@@ -316,6 +318,7 @@ directory ,/n./@目錄;,/n./@地址錄;
 disappear ,/v./@消失;
 discharge ,/v./@解除;,/v./@釋放;
 discopter ,/n./@飛碟;
+discourse ,/n./@談話;,/n./@演講;,/n./@論文;,/n./@交談;,/vi./@論述;,/vi./@講述;
 discovery ,/n./@发现;
 disengage ,/v./@解除;,/v./@脫離;
 dishonest ,/adj./@不诚实的;
@@ -545,6 +548,7 @@ infuriate ,/v./@激怒;
 ingenious ,/adj./@巧妙的;,/adj./@灵巧的;
 ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
 ingrained ,/adj./@根深蒂固的;,/adj./@深入人心的;
+inorganic ,/adj./@無機的;,/adj./@無組織的;,/adj./@無生物的;
 insertion ,/n./@插入;
 insomniac ,/n./@不眠症患者;,/adj./@失眠的;,/n./@失眠患者;
 instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;,/vt./@提起;,/vt./@发起;
@@ -553,6 +557,7 @@ insurance ,/n./@保险;
 insurgent ,/adj./@叛亂的;,/n./@叛亂者;
 integrate ,/v./@整合;
 intellect ,/n./@智慧;
+intensify ,/vt./@加強;,/vt./@增強;,/vt./@強化;
 intensity ,/n./@强度;
 intensive ,/adj./@密集的;,/adj./@集中的;
 intention ,/n./@意图;,/n./@目的;
@@ -706,6 +711,7 @@ parchment ,/n./@羊皮紙;
 parochial ,/adj./@教區的;,/adj./@狹小的;,/adj./@地方範圍的;
 partially ,/adv./@部分地;
 partition ,/n./@分隔;,/n./@划分;,/n./@隔开;
+partitive ,/adj./@表示部分的;,/n./@表示部分的句法結構;
 passenger ,/n./@旅客;
 passer-by ,/n./@过路人;
 pathology ,/n./@病理学;,/n./@病理;
@@ -825,6 +831,7 @@ recumbent ,/adj./@斜倚的;,/adj./@休息的;
 recursive ,/adj./@遞歸的;
 redundant ,/adj./@多余的;
 reference ,/n./@参考;,/n./@推薦;,/n./@調用;
+reflexive ,/adj./@反身的;,/n./@反身形式;,/n./@反身動詞;,/n./@反身代詞;
 refulgent ,/adj./@輝煌的;,/adj./@燦爛的;
 refurbish ,/v./@刷新;
 regarding ,/prep./@关于;
@@ -950,6 +957,7 @@ surrender ,/v./@投降;
 suspicion ,/n./@怀疑;
 symbiosis ,/n./@共生;
 synagogue ,/n./@犹太教堂;
+syntactic ,/adj./@句法的;
 synthesis ,/n./@綜合;,/n./@合成;
 synthetic ,/adj./@合成的;,/adj./@人造的;,/adj./@綜合的;
 tangerine ,/n./@橘子;
