--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -50,6 +50,8 @@ anticipant
 anticipate
 antimatter
 antiquated
+antitheses
+antithesis
 antonymous
 apocalypse
 Apocalypse
@@ -204,6 +206,7 @@ conviction
 convincing
 convulsion
 coordinate
+copulative
 cornucopia
 correspond
 corruption
@@ -277,6 +280,7 @@ enterprise
 enthusiasm
 enticement
 entrancing
+epexegesis
 equivalent
 equivocate
 escalation
@@ -378,6 +382,7 @@ incurrence
 indefinite
 indelicate
 indication
+indicative
 indictment
 indigenous
 individual
@@ -678,6 +683,7 @@ suspicious
 synergetic
 synonymous
 systematic
+tabernacle
 technetium
 technology
 telepathic
