--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -4,6 +4,7 @@ accommodate
 accordingly
 acknowledge
 acquisition
+adversative
 affectation
 affirmation
 affirmative
@@ -176,6 +177,7 @@ frustration
 fundamental
 furthermore
 gerontology
+grammatical
 grandfather
 grandmother
 granularity
@@ -309,6 +311,7 @@ pomegranate
 pontificate
 possibility
 postulation
+precipitant
 precipitate
 predictable
 predominant
@@ -386,6 +389,7 @@ subordinate
 substancial
 substandard
 substantial
+substantive
 subtraction
 superficial
 superiority
