--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -93,7 +93,9 @@ entanglement
 enthusiastic
 entreprenant
 entrepreneur
+epexegetical
 estrangement
+etymological
 evangelistic
 exaggeration
 exasperation
@@ -134,6 +136,7 @@ intelligence
 intermediary
 intermediate
 intermission
+interpretive
 intersection
 interstellar
 intervention
@@ -163,6 +166,7 @@ notification
 occupational
 organisation
 organization
+orthographic
 ostentatious
 outmanoeuvre
 overestimate
