--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -90,7 +90,9 @@ ornamentation
 parallelogram
 participation
 perpendicular
+precipitation
 predominantly
+prepositional
 procrastinate
 pronunciation
 psychological
