--- a/Files/lang/en/english14.csv
+++ b/Files/lang/en/english14.csv
@@ -18,10 +18,12 @@ impressionable
 infrastructure
 initialization
 interpretation
+interpretative
 interpupillary
 methodological
 mountaineering
 multiplication
+orthographical
 pharmaceutical
 philanthropist
 quintessential
