--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -63,6 +63,7 @@ angular
 animate
 anomaly
 another
+antenna
 antique
 antonym
 anxiety
@@ -236,6 +237,7 @@ Chinese
 chowder
 chronic
 chuckle
+ciboria
 circuit
 clamber
 clarify
@@ -415,6 +417,7 @@ dignity
 digraph
 digress
 diorama
+dioxide
 diploma
 disable
 disband
@@ -538,6 +541,7 @@ failure
 fanatic
 fantasy
 faraway
+farther
 fascist
 fashion
 fatigue
@@ -836,6 +840,7 @@ monitor
 monster
 montage
 monthly
+mordant
 morning
 mugwort
 mulatto
