--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -2,6 +2,7 @@ aardvark
 abdicate
 aberrant
 abeyance
+ablative
 abnormal
 abortion
 abrogate
@@ -197,6 +198,7 @@ chestnut
 childish
 children
 chivalry
+ciborium
 cinnamon
 circular
 citation
@@ -247,6 +249,7 @@ conserve
 consider
 conspire
 constant
+construe
 consumer
 contempt
 contents
@@ -318,6 +321,7 @@ delusion
 delusive
 democrat
 demolish
+deponent
 derelict
 describe
 deserter
@@ -520,6 +524,7 @@ garrison
 gauntlet
 generate
 generous
+genitive
 genocide
 geometry
 glorious
