--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -24,6 +24,7 @@ adversary
 advertise
 aeroplane
 aesthetic
+affidavit
 affiliate
 afternoon
 afterward
@@ -159,6 +160,7 @@ catalogue
 Catalonia
 catamaran
 catatonic
+causative
 celebrate
 celebrity
 celestial
@@ -316,6 +318,7 @@ directory
 disappear
 discharge
 discopter
+discourse
 discovery
 disengage
 dishonest
@@ -545,6 +548,7 @@ infuriate
 ingenious
 ingenuity
 ingrained
+inorganic
 insertion
 insomniac
 instigate
@@ -553,6 +557,7 @@ insurance
 insurgent
 integrate
 intellect
+intensify
 intensity
 intensive
 intention
@@ -706,6 +711,7 @@ parchment
 parochial
 partially
 partition
+partitive
 passenger
 passer-by
 pathology
@@ -825,6 +831,7 @@ recumbent
 recursive
 redundant
 reference
+reflexive
 refulgent
 refurbish
 regarding
@@ -950,6 +957,7 @@ surrender
 suspicion
 symbiosis
 synagogue
+syntactic
 synthesis
 synthetic
 tangerine
