--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -136,3 +136,7 @@
 ,ipso,facto,照其事實;
 ,de,facto,事實上;
 ,parental,guidance,家長指導;
+,indefinite,article,不定冠詞;
+,definite,article,定冠詞;
+,genitive,form,所有格形式;
+,nemo,dat,/redirected./@target="nemo dat quod non habet";
