--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -6,7 +6,7 @@ absolutely ,/adv./@完全地;,/adv./@绝对地;
 abstemious ,/adj./@有節制的;
 accelerate ,/v./@加速;,/v./@促进;,/v./@增速;
 acceptable ,/adj./@可接受的;
-acceptance ,/n./@接受;
+acceptance ,/n./@接受;,/n./@贊同;,/n./@承兌;,/n./@承認;
 accessible ,/adj./@可到达的;
 accidental ,/adj./@意外的;
 accomplish ,/v./@完成;
@@ -44,12 +44,14 @@ annotation ,/n./@注释;,/n./@註解;,/n./@釋文;
 antagonism ,/n./@敵對;,/n./@對抗;
 antagonist ,/n./@敵手;,/n./@敵人;,/n./@對手;
 antagonize ,/v./@激怒;
-antecedent ,/n./@觸角;,/adj./@前面的;,/n./@天線;
+antecedent ,/n./@前事;,/n./@前情;,/n./@先行詞;,/n./@前身;,/n./@祖先;,/adj./@在先的;,/adj./@先前的;,/n./@前件;,/n./@前項;
 antibiotic ,/adj./@抗生的;,/n./@抗生素;
 anticipant ,/adj./@预期的;
 anticipate ,/v./@预期;
 antimatter ,/n./@反物质;
 antiquated ,/adj./@過時的;
+antitheses ,/redirected./@target="antithesis";
+antithesis ,/n./@對立面;,/n./@對立;,/n./@對照;
 antonymous ,/adj./@反義的;
 apocalypse ,/n./@启示;,/n./@天启;
 Apocalypse ,/n./@天启;
@@ -204,6 +206,7 @@ conviction ,/n./@定罪;,/n./@确信;
 convincing ,/adj./@有说服力的;
 convulsion ,/n./@抽搐;,/n./@驚厥;,/n./@痉挛;,/n./@狂笑;,/n./@動亂;
 coordinate ,/v./@协调;,/v./@配合;,/n./@坐标;,/adj./@并列的;,/adj./@同等的;
+copulative ,/adj./@連繫的;,/adj./@連繫詞的;,/n./@連繫詞;,/adj./@交媾的;
 cornucopia ,/n./@大量;
 correspond ,/v./@相符合;
 corruption ,/n./@腐败;
@@ -219,7 +222,7 @@ decelerate ,/v./@减速;
 declension ,/n./@詞形變化;
 definitely ,/adj./@明确的;
 definition ,/n./@定义;
-definitive ,/adj./@定义的;,/adj./@决定的;
+definitive ,/adj./@定义的;,/adj./@决定的;,/adj./@限定的;,/adj./@決定性的;
 delectable ,/adj./@美味的;
 delegation ,/n./@代表团;,/n./@授权;,/n./@委托;
 deliberate ,/adj./@故意的;,/adj./@慎重的;
@@ -230,7 +233,7 @@ demolition ,/n./@毀壞;,/n./@破壞;,/n./@拆除;
 denominate ,/v./@命名;
 denotation ,/n./@符号;,/n./@表示;,/n./@意义;
 department ,/n./@部@门;,/n./@系;
-deposition ,/n./@免職;,/n./@罷官;,/n./@废黜;,/n./@证词;
+deposition ,/n./@免職;,/n./@罷官;,/n./@废黜;,/n./@证词;,/n./@沉澱;,/n./@作證;
 deprecated ,/v./@弃用;,/v./@不赞成;,/v./@不宜用;,/adj./@废弃的;,/adj./@弃用的;
 depression ,/n./@抑郁;,/n./@萧条;
 derogatory ,/adj./@贬低的;
@@ -277,6 +280,7 @@ enterprise ,/n./@企业;
 enthusiasm ,/n./@热情;
 enticement ,/n./@诱惑;,/n./@怂恿;,/n./@诱饵;
 entrancing ,/adj./@吸引人的;
+epexegesis ,/n./@附加說明;
 equivalent ,/adj./@等价的;
 equivocate ,/v./@模棱兩可;,/v./@支吾其詞;,/v./@含糊其辭;
 escalation ,/n./@增强;,/n./@加剧;,/n./@扩大;,/n./@恶化;,/n./@逐步上升;,/n./@逐步擴大;
@@ -375,9 +379,10 @@ inaccurate ,/adj./@不准确的;
 incredible ,/adj./@难以置信的;
 incredibly ,/adv./@难以置信地;
 incurrence ,/n./@招致;,/n./@蒙受;
-indefinite ,/adj./@不明確的;,/adj./@不確定的;
+indefinite ,/adj./@不明確的;,/adj./@不確定的;,/adj./@不定的;
 indelicate ,/adj./@下流的;,/adj./@不雅的;,/adj./@無教養的;
 indication ,/n./@象征;,/n./@迹象;
+indicative ,/adj./@指示性的;,/adj./@陳述性的;,/n./@陳述性語氣;,/n./@陳述性動詞;
 indictment ,/n./@控告;,/n./@起訴;,/n./@状告;,/n./@罪证;
 indigenous ,/adj./@土著的;,/adj./@本地的;,/adj./@当地的;
 individual ,/n./@个人;,/adj./@个人的;,/adj./@各自的;
@@ -497,7 +502,7 @@ occurrence ,/n./@发生;,/n./@出現;
 octahedron ,/n./@八面體;
 omnificent ,/adj./@創造萬物的;
 omniscient ,/adj./@全知的;
-opposition ,/n./@反对;
+opposition ,/n./@反对;,/n./@對抗;
 optimistic ,/adj./@乐观的;
 ornamental ,/adj./@裝飾的;
 orthogonal ,/adj./@正交的;,/adj./@直角的;
@@ -539,7 +544,7 @@ plantation ,/n./@種植園;
 playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
-possession ,/n./@資產;,/n./@所有;
+possession ,/n./@資產;,/n./@所有;,/n./@擁有;,/n./@佔有;,/n./@領地;
 precarious ,/adj./@不穩的;,/adj./@危險的;,/adj./@說不定的;
 precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
@@ -577,7 +582,7 @@ quadcopter ,/n./@四翼飛行器;,/n./@四軸飛行器;
 radicalism ,/n./@激进主义;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
-receptacle ,/n./@儲藏所;
+receptacle ,/n./@儲藏所;,/n./@容器;
 recreation ,/n./@娱乐;
 recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
@@ -678,6 +683,7 @@ suspicious ,/adj./@怀疑的;
 synergetic ,/adj./@協同的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
 systematic ,/adj./@系統的;,/adj./@有組織的;
+tabernacle ,/n./@帳篷;,/n./@聖體盒;
 technetium ,/n./@鎝;
 technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
