--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -242,6 +242,7 @@ casket
 castle
 casual
 cattle
+causal
 caveat
 cavern
 caviar
@@ -360,6 +361,7 @@ damage
 danger
 danish
 darken
+dative
 dazzle
 dealer
 debase
@@ -906,6 +908,7 @@ mutual
 myopia
 myself
 mystic
+namely
 napkin
 Naples
 Napoli
