--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -185,7 +185,7 @@ consistent ,/adj./@一致的;,/adj./@坚持的;,/adj./@始终如一的;
 conspiracy ,/n./@阴谋;,/n./@共谋;,/n./@密谋;
 constantly ,/adv./@经常地;
 constraint ,/n./@約束;
-consultant ,/n./@顾问;
+consultant ,/n./@顾问;,/n./@會診醫生;
 consummate ,/adj./@完美的;,/adj./@圓滿的;,/adj./@至上的;,/vt./@完成;
 contagious ,/adj./@感染性的;,/adj./@蔓延的;
 contestant ,/n./@竞争者;,/n./@竞赛者;,/n./@争论者;
@@ -488,6 +488,7 @@ mysterious ,/adj./@神秘的;
 narcissist ,/n./@自我陶醉者;,/n./@孤芳自赏者;,/n./@自戀者;
 navigation ,/n./@航行;,/n./@航海;
 neutralize ,/v./@中和;,/v./@抵消;
+nihilistic ,/adj./@虛無主義的;,/adj./@虛無主義者的;
 nomination ,/n./@提名;,/n./@任命;
 nominative ,/n./@主格;,/adj./@主格的;
 nonchalant ,/adj./@冷淡的;,/adj./@不關心的;
@@ -563,6 +564,8 @@ profitably ,/adv./@有利地;
 programmer ,/n./@程序员;
 projectile ,/n./@發射體;,/n./@拋射體;,/n./@射彈;
 projection ,/n./@投射;,/n./@投影;
+Prometheus ,/n./@普羅米修斯;
+promethium ,/n./@鉕;
 promontory ,/n./@岬;,/n./@海角;
 propaganda ,/n./@宣传;
 proportion ,/n./@部分;,/n./@比例;,/n./@规模;,/n./@均衡;
