--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -16,6 +16,7 @@ amphetamine ,/n./@安非他明;
 anachronism ,/n./@時代錯誤;,/n./@年代誤植;,/n./@不合時宜;,/n./@不合時代的產物;,/n./@不合時代的人;
 anaesthetic ,/n./@麻醉藥;,/n./@麻醉劑;,/adj./@麻醉的;
 analyzation ,/n./@分析;
+anarchistic ,/adj./@無政府主義的;
 anticipated ,/adj./@预期的;
 apocalyptic ,/adj./@預言的;
 application ,/n./@申请;,/n./@應用;
@@ -221,6 +222,7 @@ indifferent ,/adj./@漠不关心的;,/adj./@不感興趣的;,/adj./@冷淡的;
 indignation ,/n./@愤慨;
 indivisible ,/adj./@不可分割的;
 inferiority ,/n./@劣勢;
+infertility ,/n./@無生育能力;,/n./@貧瘠;,/n./@不肥沃;
 information ,/n./@信息;
 innumerable ,/adj./@无数的;
 inquisitive ,/adj./@好奇的;,/adj./@好問的;,/adj./@愛打聽的;
@@ -348,6 +350,7 @@ regurgitate ,/v./@回流;,/v./@反芻;,/v./@反胃;
 reluctantly ,/adv./@不情願地;,/adv./@勉強地;
 remembrance ,/n./@記憶;,/n./@紀念;,/n./@記性;
 reminiscent ,/adj./@追忆往事的;,/adj./@怀旧的;
+remorseless ,/adj./@無悔意的;,/adj./@無情的;,/adj./@殘酷的;
 renaissance ,/n./@复活;,/n./@再生;
 Renaissance ,/n./@文艺复兴;
 replacement ,/n./@代替;
@@ -385,7 +388,8 @@ standardize ,/v./@標準化;
 stimulation ,/n./@刺激;,/n./@激励;
 stomachache ,/n./@胃痛;
 subdivision ,/n./@细分;,/n./@再分;
-subordinate ,/adj./@下属的;,/adj./@次要的;
+subjunctive ,/n./@虛擬語氣;,/adj./@虛擬的;,/n./@虛擬形式;,/adj./@虛擬語氣的;
+subordinate ,/adj./@下属的;,/adj./@次要的;,/adj./@從屬的;,/n./@下屬;,/n./@部下;
 substancial ,/adj./@实体性的;
 substandard ,/adj./@不合格的;,/adj./@次等的;
 substantial ,/adj./@可觀的;
