--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -63,6 +63,7 @@ consolidated ,/adj./@加固的;,/adj./@统一的;
 constipation ,/n./@便秘;,/n./@限制;
 constitution ,/n./@憲法;,/n./@體制;
 construction ,/n./@建造;,/n./@建筑;
+consultation ,/n./@諮詢;,/n./@商議;,/n./@商討;,/n./@商討會;,/n./@會診;,/n./@參閱;
 contemporary ,/adj./@现代的;
 contemptible ,/adj./@可鄙的;
 contribution ,/n./@贡献;
