--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -6,7 +6,7 @@ aid ,/n./@援助;
 ail ,/v./@苦惱;,/v./@生病;,/n./@病痛;
 aim ,/n./@目標;
 air ,/n./@空氣;
-aka ,/abbr./@亦稱@(also known as);
+aka ,/redirected./@target="also known as";
 all ,/adj./@所有;,/adv./@全都;
 and ,/conj./@和;
 ant ,/n./@螞蟻;
