--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -399,6 +399,7 @@ grin ,/v./@露齒笑;
 grip ,/v./@緊握;,/n./@柄;,/v./@支配;
 grit ,/v./@研磨;
 grow ,/v./@長大;
+grub ,/n./@幼蟲;,/n./@蛆;,/vi./@翻掘;
 gulf ,/n./@海灣;,/n./@深淵;,/n./@鴻溝;
 gull ,/n./@鷗;,/n./@海鷗;,/vt./@欺騙;
 gulp ,/v./@吞嚥;
@@ -834,7 +835,7 @@ robe ,/n./@袍;
 rock ,/n./@巖石;
 roll ,/v./@滾動;,/v./@卷;,/n./@名單;
 Rome ,/n./@羅馬;
-roof ,/n./@房頂;
+roof ,/n./@房頂;,/n./@屋頂;
 room ,/n./@房間;
 root ,/n./@根;
 rope ,/n./@繩子;
@@ -849,6 +850,8 @@ rule ,/v./@統治;
 runt ,/n./@小家畜;
 rush ,/v./@衝;,/n./@匆促;
 rust ,/v./(使)@生鏽;,/n./@鐵鏽;,/vt./@荒廢;
+ruth ,/n./@同情;,/n./@悲哀;,/n./@悲傷;,/n./@悲痛;,/n./@憂傷;
+Ruth ,/n./@路得;
 sack ,/v./@洗劫;,/n./@麻袋;,/v./@解僱;
 safe ,/adj./@安全的;
 saga ,/n./@傳說;
