--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -447,6 +447,7 @@ fence ,/n./@柵欄;,/n./@圍欄;,/n./@籬笆;
 feral ,/adj./@野生的;,/adj./@野性的;,/adj./@野獸的;
 ferry ,/n./@渡口;,/n./@渡船;,/v./@渡運;
 fetch ,/v./@拿來;,/v./@取來;
+fetus ,/n./@胎兒;,/n./@胎;
 fever ,/n./@发燒;
 fibre ,/n./@纖維;
 field ,/n./@場;,/n./@領域;,/n./@田野;,/n./@戰場;
@@ -876,6 +877,7 @@ poker ,/n./@撲克;
 polar ,/adj./@極的;
 porch ,/n./@門廊;
 porno ,/n./@色情;
+posit ,/vt./@假設;,/vt./@假定;
 potty ,/n./@厠所;,/n./@便壺;
 power ,/n./@能量;,/n./@力;,/n./@權力;
 prank ,/n./@惡作劇;
@@ -903,6 +905,7 @@ pupil ,/n./@学生;,/n./@瞳孔;
 purge ,/v./@凈化;
 purse ,/n./@手提袋;
 putty ,/n./@油灰;
+Qatar ,/n./@卡塔爾;
 qualm ,/n./@疑虑;,/n./@不安;
 quasi ,/adj./@準的;,/adj./@類似的;
 queen ,/n./@女王;
@@ -1330,6 +1333,7 @@ virus ,/n./@病毒;
 vital ,/adj./@重要的;,/adj./@必不可少的;,/adj./@必要的;,/adj./@决定性的;,/adj./@至关重要的;,/adj./@生气勃勃的;,/adj./@充满生机的;
 vivid ,/adj./@生動的;
 vocal ,/adj./@嗓音的;,/adj./@聲音的;,/adj./@元音的;,/adj./@聲樂的;,/adj./@濁音的;
+vodka ,/n./@伏特加酒;
 vogue ,/n./@流行;,/n./@時尚;
 voice ,/n./@聲音;
 vomit ,/vt./@嘔吐;,/v./@吐出;
