--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -113,6 +113,7 @@ attest ,/vt./@证实;,/vt./@作证;,/vi./@证明;
 attune ,/v./@合拍;
 August ,/n./@八月;
 author ,/n./@作者;
+autism ,/n./@自閉症;
 autumn ,/n./@秋;
 avatar ,/n./@頭像;,/n./@化身;,/n./@替身;
 avenue ,/n./@大街;
@@ -148,6 +149,7 @@ beauty ,/n./@美女;
 become ,/v./@變成;
 before ,/v./@前于;
 behave ,/v./@行爲;
+behest ,/n./@命令;,/n./@指示;
 behind ,/v./@后于;
 behold ,/v./@看;,/v./@註視;,/v./@瞧;
 belief ,/n./@信仰;
@@ -575,6 +577,7 @@ flower ,/n./@花;
 fluent ,/adj./@流暢的;
 fluffy ,/adj./@毛茸茸的;,/adj./@蓬鬆的;,/adj./@絨毛般的;,/adj./@鬆軟的;
 foetal ,/adj./@胎兒的;
+foetus ,/redirected./@target="fetus";
 folder ,/n./@文件夾;
 follow ,/v./@跟隨;,/v./@按照;
 foment ,/v./@煽動;,/v./@助長;,/v./@挑起;
@@ -712,6 +715,7 @@ impart ,/vt./@賦予;
 impede ,/v./@妨礙;,/v./@阻礙;
 import ,/v./@輸入;,/v./@進口;
 impose ,/v./@實施;,/v./@推行;
+incept ,/vt./@開始;
 income ,/n./@收入;
 indeed ,/adv./@當然;,/adv./@確實;
 indent ,/v./@縮行;
@@ -722,6 +726,7 @@ infant ,/n./@嬰兒;
 infect ,/v./@感染;,/v./@傳染;
 infill ,/v./@填實;,/v./@填入;
 inform ,/v./@通知;
+ingest ,/vt./@吞嚥;,/vt./@吸收;,/vt./@攝取;
 inhale ,/v./@吸氣;
 inject ,/v./@註射;
 injure ,/vt./@損傷;,/v./@傷害;
