--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -3,6 +3,7 @@ abandon ,/v./@抛棄;
 abiding ,/adj./@持久的;
 ability ,/n./@能力;
 abolish ,/v./@廢除;,/v./@取消;
+abreast ,/adv./@並排;,/adv./@並列;,/adv./@並肩;
 abscond ,/vi./@潛逃;,/vi./@逃亡;,/vi./@逃走;
 absence ,/n./@缺席;
 absolve ,/v./@解除責任;
@@ -295,7 +296,7 @@ confine ,/v./@限制;,/v./@禁閉;,/n./@限制;,/n./@約束;,/n./@界限;,/vt./@
 confirm ,/v./@證實;
 conform ,/v./@符合;,/v./@遵守;
 confuse ,/v./@使困惑;
-conical ,/adj./@圓錐的;,/adj./@圓錐形的;
+conical ,/adj./@圓錐形的;
 conifer ,/n./@松柏;
 conjure ,/v./@提出;,/v./@想象;,/v./@施魔法;
 connect ,/v./@連接;
@@ -382,6 +383,7 @@ deflate ,/v./@收縮;,/v./@緊縮;
 deflect ,/vt./使@偏斜;,/vt./使@轉向;,/vi./@偏斜;,/vi./@轉向;
 delight ,/adj./@髙興的;,/adj./@愉快的;
 deliver ,/v./@交付;,/v./@傳送;,/v./@遞送;,/v./@接生;
+demigod ,/n./@半神半人;,/n./@次神;
 density ,/n./@密度;
 dentist ,/n./@牙醫;
 deplete ,/v./@耗盡;,/v./@用盡;,/v./@衰竭;
@@ -904,6 +906,7 @@ orchard ,/n./@果園;
 ordinal ,/adj./@顺序的;,/adj./@依次的;,/n./@序数;
 organic ,/adj./@有機的;
 orifice ,/n./@孔;,/n./@口;,/n./@洞;
+origami ,/n./@日本摺紙藝術;
 osmotic ,/adj./@渗透的;
 ossuary ,/n./@藏屍堂;
 outcome ,/n./@結果;
@@ -1022,7 +1025,7 @@ premium ,/n./@保險費;,/n./@獎金;,/n./@津贴;
 prepare ,/v./@准備;
 present ,/n./@現在;,/v./@提出;,/v./@介紹;,/v./@呈現;,/v./@出席;
 preside ,/v./@主持;
-presume ,/v./@假定;,/v./@推測;
+presume ,/v./@假定;,/v./@推測;,/vt./@假設;
 pretend ,/v./@假裝;
 pretext ,/n./@借口;
 prevail ,/v./@流行;,/v./@盛行;,/v./@戰勝;
@@ -1111,9 +1114,10 @@ regular ,/adj./@有規律的;
 rejoice ,/n./@歡樂;
 release ,/v./@发布;,/v./@釋放;
 remnant ,/n./@殘余;,/n./@残迹;
-remorse ,/n./@懊悔;,/n./@同情;
+remorse ,/n./@懊悔;,/n./@悔恨;,/n./@自責;,/n./@後悔;
 renewal ,/n./@更新;,/n./@恢復;,/n./@復興;,/n./@革新;,/n./@續訂;,/n./@續借;
 replace ,/v./@代替;
+replica ,/n./@複製品;
 repress ,/v./@抑制;,/v./@鎮壓;
 request ,/vt./@請求;,/n./@請求;
 require ,/v./@需要;,/v./@請求;
@@ -1180,7 +1184,7 @@ section ,/n./@部分;,/n./@區域;,/n./@章節;
 secular ,/adj./@世俗的;,/adj./@长期的;,/adj./@现世的;
 segment ,/n./@部分;,/n./@段;,/n./@節;,/n./@片;,/v./@分割;
 selfish ,/adj./@自私的;
-seminar ,/n./@研討會;,/n./@學術講座;
+seminar ,/n./@研討會;,/n./@學術講座;,/n./@研討班;
 sensual ,/adj./@肉欲的;,/adj./@感覺的;
 sequent ,/adj./@連續的;,/adj./@其次的;,/adj./@相繼的;,/n./@後果;,/n./@相繼發生;
 serfdom ,/n./@農奴身分;,/n./@奴隸身分;
@@ -1384,6 +1388,7 @@ Ukraine ,/n./@烏克蘭;
 undergo ,/v./@經歷;,/v./@經受;
 unequal ,/n./@不平等的;
 unhinge ,/v./@(使)精神错乱;,/v./@(使)精神失常;
+unicorn ,/n./@獨角獸;
 uniform ,/n./@制服;,/adj./@全部相同的;
 unknown ,/adj./@未知的;,/adj./@陌生的;,/n./@未知;,/n./@未知物;,/n./@未知數;
 unleash ,/v./@解放;
