--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -60,6 +60,7 @@ amputate ,/vt./@截除;,/vi./@截肢;
 anabolic ,/adj./@合成代謝的;,/adj./@同化的;
 analogue ,/n./@類似物;,/adj./@類似的;,/n./@模擬;
 analysis ,/n./@分析;
+anarchic ,/adj./@無政府的;
 anathema ,/n./@詛咒;
 ancestor ,/n./@祖先;
 anecdote ,/n./@軼事;
@@ -111,6 +112,7 @@ attitude ,/n./@态度;,/n./@看法;
 attorney ,/n./@律师;,/n./@代理人;
 audience ,/n./@听众;
 audition ,/n./@試音;,/v.//n./@試聽;,/n./@聽力;,/n./@聽覺;,/v.//n./@試唱;,/v./@面試;,/n./@试演;,/vi./@试演;
+autistic ,/adj./@患自閉症的;,/adj./@自閉症的;,/n./@自閉症患者;
 autonomy ,/n./@自治;,/n./@自主;
 auxilian ,/n./@辅助人员;
 aversion ,/n./@非常討厭;
@@ -323,6 +325,7 @@ democrat ,/n./@民主党人;
 demolish ,/v./@拆除;,/v./@破壞;,/v./@爆破;,/v./@毀壞;
 deponent ,/adj./@異態的;,/n./@異態動詞;,/n./@證人;
 derelict ,/adj./@破败的;,/adj./@荒废的;
+derision ,/n./@嘲笑;,/n./@嘲弄;
 describe ,/v./@描述;
 deserter ,/n./@逃兵;,/n./@背棄者;
 designer ,/n./@设计师;
@@ -782,7 +785,9 @@ neighbor ,/n./@邻居;
 nepotism ,/n./@裙帶關係;
 newlywed ,/n./@新婚夫妇;
 nickname ,/n./@绰号;
+nihilism ,/n./@虛無主義;
 nineteen ,/adj./@十九;
+nitrogen ,/n./@氮;
 nominate ,/v./@提名;,/v./@推薦;,/v./@任命;,/v./@指定;
 nomogram ,/n./@列線圖;,/n./@諾謨圖;
 nonsense ,/n./@废话;,/n./@无稽之谈;
@@ -797,7 +802,7 @@ numerous ,/adj./@大量的;
 nutrient ,/n./@營養物;,/n./@營養成分;,/adj./@營養的;
 obedient ,/adj./@服從的;,/adj./@順從的;,/adj./@聽話的;
 obituary ,/n./@誧告;
-oblivion ,/n./@遗忘;,/n./@湮灭;,/n./@赦免;
+oblivion ,/n./@遗忘;,/n./@湮灭;,/n./@赦免;,/n./@無意識狀態;
 observer ,/n./@觀察員;
 obsidian ,/n./@黑曜石;
 obsolete ,/v./@过时;,/adj./@过时的;
@@ -1004,7 +1009,7 @@ rotation ,/n./@旋转;
 rudiment ,/n./@雛形;,/n./@基本原理;
 ruminant ,/adj./@反芻的;,/adj./@沉思的;
 ruminate ,/v./@沉思;,/v./@反芻;,/vi./@反复思考;
-ruthless ,/adj./@冷酷的;
+ruthless ,/adj./@冷酷的;,/adj./@殘忍的;,/adj./@無情的;,/adj./@堅決的;
 sabotage ,/n./@破坏;,/n./@妨碍;
 saboteur ,/n./@蓄意破壞者;
 sadistic ,/adj./@虐待狂的;
@@ -1136,6 +1141,7 @@ symmetry ,/n./@對稱;
 sympathy ,/n./@同情;
 symphony ,/n./@交响乐;,/n./@交響曲;,/n./@和聲;,/n./@和諧;,/n./@諧聲;
 synaptic ,/adj./@突触的;
+syndrome ,/n./@綜合症;,/n./@綜合症狀;,/n./@併發症狀;
 synonymy ,/n./@同義;
 synoptic ,/adj./@概要的;,/adj./@提要的;
 tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短程的;
