--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -20,6 +20,7 @@ adulthood ,/n./@成年;
 adumbrate ,/v./@透露;
 advantage ,/n./@优点;
 adventure ,/n./@冒险;
+adverbial ,/n./@狀語;,/adj./@副詞的;
 adversary ,/n./@敵手;
 advertise ,/v./@做广告;
 aeroplane ,/n./@飛機;
@@ -55,7 +56,8 @@ amplitude ,/n./@振幅;
 amusement ,/n./@娱乐;,/n./@樂趣;,/n./@消遣;
 analgesic ,/n./@鎮痛劑;
 analogous ,/adj./@类似的;
-anarchist ,/n./@反抗權威的人;
+anarchism ,/n./@無政府主義;
+anarchist ,/n./@反抗權威的人;,/n./@無政府主義者;,/adj./@無政府主義的;
 ancillary ,/adj./@次要的;
 animation ,/n./@动画;,/n./@活力;,/n./@生機;
 animosity ,/n./@敵意;,/n./@仇恨;,/n./@憎惡;
@@ -108,6 +110,7 @@ awestruck ,/adj./@充滿敬畏的;
 backslash ,/n./@反斜杠;
 bacterium ,/n./@細菌;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
+ballerina ,/n./@芭蕾舞女演員;
 ballistic ,/adj./@彈道的;
 barometer ,/n./@气压计;
 barricade ,/n./@路障;,/n./@街壘;,/vt./@堵住;
@@ -129,7 +132,7 @@ bookshelf ,/n./@書架;
 bootstrap ,/n./@引導程序;
 botanical ,/adj./@植物學的;
 boyfriend ,/n./@男朋友;
-breakdown ,/n./@故障;
+breakdown ,/n./@故障;,/n./@垮臺;,/n./@崩潰;,/n./@分析;,/n./@分解;,/n./@衰竭;
 breakfast ,/n./@早餐;
 briefcase ,/n./@公文包;
 brillance ,/n./@明亮度;
@@ -527,6 +530,7 @@ inability ,/n./@無能;
 incapable ,/adj./@不能的;,/adj./@不會的;
 incarnate ,/adj./@化身的;,/adj./@人體化的;,/adj./@具體化的;,/vt./@具體化;
 incentive ,/n./@刺激;,/adj./@刺激性的;
+inception ,/n./@開始;
 incessant ,/adj./@持續不斷的;,/adj./@連續的;
 inclusion ,/n./@包含;
 inclusive ,/adj./@包容的;,/adj./@包括的;,/adj./@包含的;
@@ -846,6 +850,7 @@ reminisce ,/n./@追忆;
 rendition ,/n./@给予;
 repellent ,/adj./@不吸引人的;
 replenish ,/v./@補充;,/v./@再加滿;
+replicant ,/n./@複製人;
 reposeful ,/adj./@平穩的;,/adj./@沉著的;
 reprehend ,/v./@指責;,/v./@斥責;,/n./@責備;
 represent ,/v./@代表;
@@ -1054,3 +1059,4 @@ workplace ,/n./@工作地;
 wuthering ,/adj./@呼嘯;
 yesterday ,/n./@昨天;,/adv./@在昨天;
 youngster ,/n./@少年;
+zeitgeist ,/n./@時代精神;
