--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -488,6 +488,7 @@ mysterious
 narcissist
 navigation
 neutralize
+nihilistic
 nomination
 nominative
 nonchalant
@@ -563,6 +564,8 @@ profitably
 programmer
 projectile
 projection
+Prometheus
+promethium
 promontory
 propaganda
 proportion
