--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -16,6 +16,7 @@ amphetamine
 anachronism
 anaesthetic
 analyzation
+anarchistic
 anticipated
 apocalyptic
 application
@@ -221,6 +222,7 @@ indifferent
 indignation
 indivisible
 inferiority
+infertility
 information
 innumerable
 inquisitive
@@ -348,6 +350,7 @@ regurgitate
 reluctantly
 remembrance
 reminiscent
+remorseless
 renaissance
 Renaissance
 replacement
@@ -385,6 +388,7 @@ standardize
 stimulation
 stomachache
 subdivision
+subjunctive
 subordinate
 substancial
 substandard
