--- a/Files/lang/en/english13.csv
+++ b/Files/lang/en/english13.csv
@@ -89,6 +89,8 @@ neighbourhood
 ornamentation
 parallelogram
 participation
+perfectionism
+perfectionist
 perpendicular
 precipitation
 predominantly
