--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -447,6 +447,7 @@ fence
 feral
 ferry
 fetch
+fetus
 fever
 fibre
 field
@@ -876,6 +877,7 @@ poker
 polar
 porch
 porno
+posit
 potty
 power
 prank
@@ -903,6 +905,7 @@ pupil
 purge
 purse
 putty
+Qatar
 qualm
 quasi
 queen
@@ -1330,6 +1333,7 @@ virus
 vital
 vivid
 vocal
+vodka
 vogue
 voice
 vomit
