--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -113,6 +113,7 @@ attest
 attune
 August
 author
+autism
 autumn
 avatar
 avenue
@@ -148,6 +149,7 @@ beauty
 become
 before
 behave
+behest
 behind
 behold
 belief
@@ -575,6 +577,7 @@ flower
 fluent
 fluffy
 foetal
+foetus
 folder
 follow
 foment
@@ -712,6 +715,7 @@ impart
 impede
 import
 impose
+incept
 income
 indeed
 indent
@@ -722,6 +726,7 @@ infant
 infect
 infill
 inform
+ingest
 inhale
 inject
 injure
