--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -3,6 +3,7 @@ abandon
 abiding
 ability
 abolish
+abreast
 abscond
 absence
 absolve
@@ -382,6 +383,7 @@ deflate
 deflect
 delight
 deliver
+demigod
 density
 dentist
 deplete
@@ -904,6 +906,7 @@ orchard
 ordinal
 organic
 orifice
+origami
 osmotic
 ossuary
 outcome
@@ -1114,6 +1117,7 @@ remnant
 remorse
 renewal
 replace
+replica
 repress
 request
 require
@@ -1384,6 +1388,7 @@ Ukraine
 undergo
 unequal
 unhinge
+unicorn
 uniform
 unknown
 unleash
