--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -60,6 +60,7 @@ amputate
 anabolic
 analogue
 analysis
+anarchic
 anathema
 ancestor
 anecdote
@@ -111,6 +112,7 @@ attitude
 attorney
 audience
 audition
+autistic
 autonomy
 auxilian
 aversion
@@ -323,6 +325,7 @@ democrat
 demolish
 deponent
 derelict
+derision
 describe
 deserter
 designer
@@ -782,7 +785,9 @@ neighbor
 nepotism
 newlywed
 nickname
+nihilism
 nineteen
+nitrogen
 nominate
 nomogram
 nonsense
@@ -1136,6 +1141,7 @@ symmetry
 sympathy
 symphony
 synaptic
+syndrome
 synonymy
 synoptic
 tactical
