--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -20,6 +20,7 @@ adulthood
 adumbrate
 advantage
 adventure
+adverbial
 adversary
 advertise
 aeroplane
@@ -55,6 +56,7 @@ amplitude
 amusement
 analgesic
 analogous
+anarchism
 anarchist
 ancillary
 animation
@@ -108,6 +110,7 @@ awestruck
 backslash
 bacterium
 balaclava
+ballerina
 ballistic
 barometer
 barricade
@@ -527,6 +530,7 @@ inability
 incapable
 incarnate
 incentive
+inception
 incessant
 inclusion
 inclusive
@@ -846,6 +850,7 @@ reminisce
 rendition
 repellent
 replenish
+replicant
 reposeful
 reprehend
 represent
@@ -1054,3 +1059,4 @@ workplace
 wuthering
 yesterday
 youngster
+zeitgeist
