--- a/Files/lang/phrases/2 word phrase.csv
+++ b/Files/lang/phrases/2 word phrase.csv
@@ -140,3 +140,6 @@
 ,definite,article,定冠詞;
 ,genitive,form,所有格形式;
 ,nemo,dat,/redirected./@target="nemo dat quod non habet";
+,subordinate,clause,從句;
+,subsequent,to,在...之後;
+,Down's,syndrome,唐氏綜合症;
