--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -89,6 +89,8 @@ neighbourhood ,/n./@街坊;,/n./@邻近地区;
 ornamentation ,/n./@裝飾;
 parallelogram ,/n./@平行四邊形;
 participation ,/n./@参与;,/n./@分享;,/n./@参股;
+perfectionism ,/n./@完美主義;
+perfectionist ,/n./@完美主義者;
 perpendicular ,/n./@垂线;
 precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
