--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -1,5 +1,6 @@
 chronologically ,/adv./@按时间先后排序的;
 confidentiality ,/n./@機密;,/n./@機密性;
+contemporaneous ,/adj./@同時存在的;,/adj./@同時發生的;,/adj./@同時期的;
 democratization ,/n./@民主化;
 dichotomization ,/n./@二分;
 distinguishable ,/adj./@可辨别的;
