--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -413,6 +413,7 @@ terminology ,/n./@术语;,/n./@术语学;
 tetrahedron ,/n./@四面體;
 theoretical ,/adj./@理論的;
 thermometer ,/n./@溫度計;
+thesauruses ,/redirected./@target="thesaurus";
 thunderbolt ,/n./@霹靂;,/n./@雷電;
 timemachine ,/n./@时光机;
 topographic ,/adj./@地形的;
