--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -1163,7 +1163,7 @@ terrific ,/adj./@极大的;
 tertiary ,/adj./@第三的;,/adj./@第三纪的;,/adj./@第三系的;,/adj./@第三产业的;,/adj./@高等教育的;
 testator ,/n./@立遺囑者;
 theorize ,/vt./@理論化;,/vt./@學說化;
-thesauri ,/n./@主題詞表;,/n./@同義詞詞典;,/n./@同反義詞詞典;
+thesauri ,/redirected./@target="thesaurus";
 thinking ,/v./@想;,/n./@思想;
 thirteen ,/n./@十三;
 thousand ,/n./@千;
