--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -981,7 +981,7 @@ territory ,/n./@领地;
 tesseract ,/n./@四次元立方體;,/n./@超立方體;,/n./@四維立方體;
 theocracy ,/n./@神權政體;
 therefore ,/conj.//adv./@因此;
-thesaurus ,/n./@寶庫;,/n./@同義詞詞典;,/n./@類屬詞典;,/n./@主題詞表;
+thesaurus ,/n./@寶庫;,/n./@同義詞詞典;,/n./@類屬詞典;,/n./@主題詞表;,/n./@同反義詞詞典;
 thickness ,/n./@厚;,/n./@厚度;,/n./@濃;
 threshold ,/n./@门槛;
 thumbnail ,/n./@拇指甲;,/n./@缩略图;,/n./@略图;,/n./@短文;
